--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@ This is kept deliberately, so that one does not need to run .py file solely from
 <a id="how-it-works" class="anchor" href="#how-it-works" aria-hidden="true"><span class="octicon octicon-link"></span></a>How it works?</h3>
 
 <p>Coming soon.</p>
+
+<h3>
+<a id="author" class="anchor" href="#author" aria-hidden="true"><span class="octicon octicon-link"></span></a>AUTHOR</h3>
+<p><a href = "https://www.linkedin.com/profile/view?id=289879201">Piyush Deshmukh</a></p>
+
       </section>
     </div>
 
