--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@ This is kept deliberately, so that one does not need to run .py file solely from
 
 <h3>
 <a id="author" class="anchor" href="#author" aria-hidden="true"><span class="octicon octicon-link"></span></a>AUTHOR</h3>
-<p><a href = "https://www.linkedin.com/profile/view?id=289879201">Piyush Deshmukh</a></p>
+<p><a href = "https://www.linkedin.com/profile/view?id=289879201">Piyush Deshmukh</a><br />
+  <a href = "mailto:p.desh31@gmail.com">Contact Me</a>
+</p>
 
       </section>
     </div>
